# rust-life-gpu

./: Cargo.toml  DESIGN.md  README.md  index.html
.github/workflows/: deploy.yml
src/: app.rs  gpu_state.rs  lib.rs  main.rs  simulation.rs
src/shaders/: display.wgsl  life.wgsl  render_blit.wgsl
