[package]
name = "rust-life-gpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-life-gpu"
path = "src/main.rs"

[dependencies]
wgpu = "22"
winit = "0.30"
egui = "0.29"
egui-wgpu = "0.29"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.29"
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# arboard (clipboard) doesn't support wasm32; disable all default-features
egui-winit = { version = "0.29", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
console_log = "0.2"

[profile.release]
opt-level = 3
